about us and contact us fragments have been added.

--- a/app/src/main/res/layout/nav_header_main.xml
+++ b/app/src/main/res/layout/nav_header_main.xml
@@ -31,9 +31,9 @@
         android:textColor="@color/color_text_user_name" />
 
     <View
-        android:layout_width="1dp"
+        android:layout_width="match_parent"
         android:layout_gravity="bottom"
-        android:layout_height="match_parent">
+        android:layout_height="2dp">
     </View>
 
 </LinearLayout>
