--- a/app/src/main/res/layout/fragment_name.xml
+++ b/app/src/main/res/layout/fragment_name.xml
@@ -10,6 +10,6 @@
         android:layout_width="match_parent"
         android:layout_height="match_parent"
         android:id="@+id/edit_text_name_user"
-        android:text="@string/hello_blank_fragment" />
+        android:hint="@string/hello_blank_fragment" />
 
 </FrameLayout>
