--- a/app/src/main/res/layout/fragment_retrofit.xml
+++ b/app/src/main/res/layout/fragment_retrofit.xml
@@ -3,12 +3,12 @@
     xmlns:tools="http://schemas.android.com/tools"
     android:layout_width="match_parent"
     android:layout_height="match_parent"
-    tools:context=".form.FamilyFragment">
+    tools:context=".retrofit.RetrofitFragment">
 
-    <EditText
+    <!-- TODO: Update blank fragment layout -->
+    <TextView
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/edit_Text_Family_User"
-        android:hint="@string/hello_blank_fragment" />
+        android:text="@string/hello_blank_fragment" />
 
 </FrameLayout>
