--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -5,8 +5,7 @@
 
     <item
         android:id="@+id/nav_profile"
-        android:title="@string/text_profile"
-        />
+        android:title="@string/text_profile" />
     <item
         android:id="@+id/nav_about_us"
         android:title="@string/text_about_us" />
