--- a/app/src/main/res/menu/activity_main_drawer.xml
+++ b/app/src/main/res/menu/activity_main_drawer.xml
@@ -7,6 +7,9 @@
         android:id="@+id/nav_profile"
         android:title="@string/text_profile" />
     <item
+        android:id="@+id/nav_retrofit"
+        android:title="@string/text_retrofit" />
+    <item
         android:id="@+id/nav_about_us"
         android:title="@string/text_about_us" />
     <item
