--- a/app/src/main/res/layout/fragment_list_user.xml
+++ b/app/src/main/res/layout/fragment_list_user.xml
@@ -4,23 +4,20 @@
 <RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
 
-     android:layout_height="match_parent"
-     android:layout_width="match_parent">
+    android:layout_width="match_parent"
+    android:layout_height="match_parent">
 
     <android.support.v7.widget.RecyclerView
+        android:id="@+id/recycler_view_list_modle"
         android:layout_width="match_parent"
         android:layout_height="match_parent"
-        android:id="@+id/recycler_view_list_modle"
-        tools:context=".ListUsersFragment">
-    </android.support.v7.widget.RecyclerView>
+        tools:context=".ListUsersFragment"></android.support.v7.widget.RecyclerView>
 
     <ProgressBar
+        android:id="@+id/progress_bar"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_centerInParent="true"
-        android:id="@+id/progress_bar"
-        />
-
+        android:layout_centerInParent="true" />
 
 
 </RelativeLayout>
